@@ -35,6 +35,7 @@ This release includes the following bugfixes:
    query part
  o don't shrink SO_SNDBUF on windows for those who have it set large already
  o connect next bug
+ o invalid file name characters handling on Windows
 
 This release includes the following known bugs:
 
@@ -46,6 +47,6 @@ advice from friends like these:
  Karl Moerder, Kamil Dudka, Krister Johansen, Andre Guibert de Bruet,
  Michal Marek, Eric Wong, Guenter Knauf, Peter Sylvester, Daniel Johnson,
  Claes Jakobsson, Sven Anders, Chris Mumford, John P. McCaskey,
- Constantine Sapuntzakis, Michael Stillwell, Tom Mueller
+ Constantine Sapuntzakis, Michael Stillwell, Tom Mueller, Dan Fandrich,
 
         Thanks! (and sorry if I forgot to mention someone)
